--- a/app/assets/stylesheets/gh-fork-ribbon.css
+++ b/app/assets/stylesheets/gh-fork-ribbon.css
@@ -21,6 +21,9 @@
   /* Add a drop shadow */
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+
+  /* for .navbar-fixed-top */
+  z-index: 2;
 }
 .github-fork-ribbon a {
   /* Set the font */
